# justredis

./: .gitignore  Dockerfile.test  Dockerfile.test.fast  LICENSE  README.md  example.py  setup.cfg  tox.ini
.github/workflows/: release.yml  test.yml
justredis/: __init__.py  connection.py  connectionpool.py  decoder.py  encoder.py  errors.py  redis.py  sockets.py  utils.py
justredis/nonsync/: cluster.py  connection.py  connectionpool.py  environment.py  redis.py
justredis/nonsync/environments/: anyio.py
justredis/sync/: cluster.py  connection.py  connectionpool.py  environment.py  redis.py  sentinel.py  sockets.py
justredis/sync/environments/: threaded.py
tests/: conftest.py  redis_server.py  test_basic.py  test_example.py
tests/async/: conftest.py  test_async.py
