[metadata]
name = justredis
version = 0.0.1a1
description = A Redis client
keywords = redis
url = https://github.com/tzickel/justredis
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = justredis

[tool:pytest]
testpaths = tests
