[metadata]
name = justredis
version = 0.0.1a1
description = A Redis client for Python supporting both latest Redis features and Python synchronous (Python 3.5+) and asynchronous (Python 3.6+) communication.
keywords = redis
author = tzickel
license = MIT
url = https://github.com/tzickel/justredis
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >= 3.5

[options.packages.find]
exclude =
    tests

[tool:pytest]
testpaths = tests
