[metadata]
name = justredis
version = 0.0.1a4
description = A Redis client for Python supporting many Redis features and Python synchronous (Python 3.5+) and asynchronous (Python 3.6+) communication.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = redis
author = tzickel
project_urls =
    Source code = https://github.com/tzickel/justredis
    Issue tracker = https://github.com/tzickel/justredis/issues
license = MIT
url = https://github.com/tzickel/justredis
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >= 3.5

[options.packages.find]
exclude =
    tests

[tool:pytest]
testpaths = tests
